--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
    <div class="main">
-      <video muted autoplay loop src="/img/earth.mp4"></video>
+      <video muted autoplay loop src="images/earth.mp4"></video>
       <div class="content">
          <h1 class="title">الأرض</h1>
          <div class="swiper">
