--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
    <title>Project | Earth</title>
-   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+   <link rel="shortcut icon" href="./imgages/favicon.ico" type="image/x-icon">
    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
    <div class="main">
-      <video muted autoplay loop src="images/earth.mp4"></video>
+      <video muted autoplay loop src="./images/earth.mp4"></video>
       <div class="content">
          <h1 class="title">الأرض</h1>
          <div class="swiper">
